[gd_scene load_steps=3 format=3 uid="uid://cm504wn5tm302"]

[ext_resource type="StyleBox" uid="uid://mw8dmdnlb4k5" path="res://assets/styles/panel_style.tres" id="1_d73pd"]
[ext_resource type="Script" uid="uid://cx7fb2t4y82oq" path="res://main/interface/save_load_panel/save_load_panel.gd" id="2_6c05c"]

[node name="SaveLoadPanel" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_d73pd")
script = ExtResource("2_6c05c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SaveButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Load"
